6.0 toggles beta and some refactoring for parallelization